# STC_Demo

./: CMakeLists.txt  demo_ft.cpp  demo_it.cpp  readme.md
ofunctions/: ForwardTaskFunctor.h  Functor.h  InverseTaskFunctor.h
test/: testForwardTask.cpp  testInverseTask.cpp
